<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SMAR</string>

    <!-- Activity Menu (not Main Menu!) -->
    <string name="action_settings">Settings</string>

    <!-- Activity Title -->
    <string name="title_activity_barcode_scanner">BarcodeScannerActivity</string>
    <string name="title_activity_init_conf">Set initial configuration</string>
    <string name="title_activity_search_product">SearchProduct</string>
    <string name="title_activity_insert_product">InsertProduct</string>
    <string name="title_activity_product_stock">ProductStock</string>
    <string name="title_activity_svgtest">SVGTestActivity</string>
    <string name="title_activity_receiving_products">ReceivingProducts</string>

    <!-- Main menu -->
    <string name="bt_main_search_product">Search Product</string>
    <string name="bt_main_load_product">Insert Products</string>
    <string name="bt_main_receive_product">Receiving Products</string>
    <string name="bt_main_settings">Settings</string>
    <string name="bt_main_logout">Logout</string>

    <!-- Initial Configuration -->
    <string name="tv_initconf_title">Initial Configuration</string>
    <string name="tv_initconf_serverip">Path to SMAR REST Server (excluding index.php):\n No \".\" on keyboard? Use \"*\".</string>
    <string name="hint_initconf_serverip">Please enter an IP address or domain name</string>
    <string name="et_initconf_serverip">rest.example.com</string>
    <string name="tv_initconf_storage">Storage:</string>
    <string name="cb_initconf_storage">Save app data on external storage (like SD card)?</string>
    <string name="bt_initconf_save">Save configuration</string>

    <!-- Login -->
    <string name="tv_login_descr">Please choose your username and scan your personal QR-code:</string>
    <string name="spinner_login_chooseuser">Choose user&#8230;</string>

    <!-- Barcode Scanner -->
    <string name="tv_barcode_note">Focus camera on QR- or barcode to scan.</string>

    <!-- Insert and Search Product and Receive Product -->
    <string name="tv_product_product">Product: </string>
    <string name="tv_product_stock">Stock: </string>
    <string name="tv_product_shelfid">Shelf: </string>
    <string name="tv_product_current_unit">Unit: </string>
    <string name="tv_product_sales_area">Shop: </string>
    <string name="iv_product_shelf_descr">Shows the shelf and the product position</string>
    <string name="bt_scan">Scan</string>
    <string name="bt_finish_receiving">Finish</string>
    <string name="tv_name">Name</string>
    <string name="tv_amount">Amount</string>
    <string name="tv_unit">Unit</string>
    <string name="tv_new_amount">Entered amount</string>
    <string name="tv_new_unit">Entered unit</string>
    <string name="bt_insertproduct">Insert</string>
    <string name="tv_insertproduct_amount">Amount: </string>
    <string name="var_unit_single">Single</string>
    <string name="tv_receiveproduct_ordername">Order: </string>
    <string name="tv_receiveproduct_orderbarcode">Barcode</string>
    <string name="tv_receiveproduct_orderdate">Date: </string>
    
    <!-- Settings -->
    <string name="tv_settings_title">Settings</string>
    <string name="tv_settings_serverip">Path to SMAR REST Server (including index.php):\n No \".\" on keyboard? Use \"*\".</string>
    <string name="et_settings_serverip">rest.example.com/index.php</string>
    <string name="tv_settings_localization">Choose language:</string>
    <string name="bt_settings_reset">Reset to default and exit app</string>

    <!-- Dialog: Choosing unit and amount -->
    <string name="tv_product_unit">Please choose an unit:</string>
    <string name="tv_product_amount">Enter amount:</string>

    <!-- ProgressDialogs -->
    <string name="pd_title_wait">Please wait</string>
    <string name="pd_content_shelfdownload">Downloading shelf graphics&#8230;</string>
    <string name="pd_content_recuser">Receiving user list&#8230;</string>
    <string name="pd_content_login">Logging in&#8230;</string>
    <string name="pd_content_checkconnection">Checking server connection&#8230;</string>
    <string name="pd_content_receiving_product_infos">Receiving product information</string>
    <string name="pd_content_available_units">Receiving available units.</string>
    <string name="pd_content_receiving_receive_infos">Receiving receive information</string>
    

    <!-- AlertDialogs -->
    <string name="ad_title_shelfdownloaderror">Could not download shelf graphics&#8230;</string>
    <string name="ad_content_shelfdownloaderror">This could cause SMAR stop working.\n Please restart the app or your device.</string>
    
    <string name="ad_title_exitapp">Exit Application?</string>
    <string name="ad_content_exitapp">Are you sure you want to exit SMAR?</string>
    
    <string name="ad_title_cameraerror">Could not load camera&#8230;</string>
    <string name="ad_content_cameraerror">Camera error&#8230;\n\n Please restart your device and try again.</string>
    
    <string name="ad_title_permissionerror">Insufficient Permission&#8230;</string>
    <string name="ad_content_permissionerror">You don\'t have the permission to enter the SMAR app&#8230;</string>
    
    <string name="ad_title_creddeviceerror">Device not active&#8230;</string>
    <string name="ad_content_creddeviceerror">This device is not registered/activated&#8230;\n Please contact your system administrator.\n\n Hardware address:</string>
    
    <string name="ad_title_crederror">Wrong credentials&#8230;</string>
    <string name="ad_content_crederror">Wrong QR-code.\n\n Please try again with correct QR-code.</string>
    
    <string name="ad_title_unknownerror">Could not load users&#8230;</string>
    <string name="ad_content_unknownerror">Unknown error&#8230;\n\n Please try again later or contact system administrator&#8230;</string>
    
    <string name="ad_title_connectionerror">Could not establish server connection&#8230;</string>
    <string name="ad_content_connectionerror">Is this device connected?\n Are the settings correct?\n Is the server online and ready?\n\n Please choose an action&#8230;</string>
    
    <string name="ad_title_query">Query failed</string>
    <string name="ad_content_query">Updating database failed.\nPlease try again later&#8320;</string>
    
    <string name="ad_title_permission">Insufficient permission</string>
    <string name="ad_content_permission">You don\'t have the permission to update the database.\nPlease contact your system administrator.</string>
    
    <string name="ad_title_unknown">Update failed</string>
    <string name="ad_content_unknown">Unknown error&#8230;\n\n Please try again later or contact system administrator&#8230;</string>
    
    <string name="ad_title_parameters">Missing parameters</string>
    <string name="ad_content_parameters">Server response: missing parameters&#8230;\n\n Please try again later or contact system administrator&#8230;</string>
    
    <string name="ad_title_capacity">Section is full</string>
    <string name="ad_content_capacity">Not enough space to add so much products.</string>
    
    <string name="ad_title_outofstock">Out of stock</string>
    <string name="ad_content_outofstock">Not enough stock in warehouse for this operation.</string>
    
    <string name="ad_bt_exitapp">Exit App</string>
    <string name="ad_bt_tryagain">Try Again</string>
    <string name="ad_bt_ignore">Ignore</string>
    <string name="ad_bt_initconfig">Initial Configuration</string>
    <string name="ad_bt_yes">Yes</string>
    <string name="ad_bt_no">No</string>
    <string name="ad_bt_ok">Okay</string>
    <string name="ad_bt_add">Add</string>
    <string name="ad_bt_cancel">Cancel</string>
    <string name="ad_bt_overwrite">Overwrite</string>
    
    <string name="ad_title_update">Update failed</string>
    <string name="ad_content_try_again">Please try again or ask the admin for more support. Click OK to scan next.</string>
    <string name="ad_title_put_into_shelf">Product into shelf</string>
    <string name="ad_content_put_into_shelf">Do you want to put this article into the shelf?</string>
	<string name="ad_content_no_information">Could not find information to this product. Check code and talk to admin. Click \"ok\" to scan next prodcut.</string>
	<string name="ad_content_no_order">Order with scanned barcode not in the database.</string>
	<string name="ad_title_unfortunely_closed">Unknown Error</string>
    <string name="ad_content_json">Failed loading product.\nPlease try again later or contact system administrator&#8230;</string>
	<string name="ad_title_svg_error">Error while loading shelf graphic&#8230;</string>
    <string name="ad_content_svg_error">Could not load shelf graphic. Maybe there are new information on the server.\nPlease restart the app&#8230;</string>
    <string name="ad_title_noshelf">No shelf for product</string>
    <string name="ad_content_noshelf">This product is not in a shelf yet&#8230;\nPlease scan another product.</string>
	<string name="ad_title_successful_update">Successful update</string>
	<string name="ad_content_successful_update">You have updated successfully. Click \"ok\" to scan next.</string>
    <string name="pd_content_updating">Updating</string>
	<string name="ad_content_successful_insert">You have inserted successfully. Click \"ok\" to scan next.</string>
    <string name="ad_title_no_information">No information</string>
    
    <string name="ad_title_next_product">Next product</string>
    <string name="ad_content_next">To scan next product, press OK. To finish scanning, press No.</string>
    
    <string name="ad_title_amountchooser">Add delivery&#8230;</string>
    <string name="ad_title_overwrite">Overwrite product?</string>
    <string name="ad_content_overwrite">This product already has been received.\nOverwrite or add old value?</string>
    
    <string name="ad_title_receiving_cancel">Cancel receiving products?</string>
    <string name="ad_content_receiving_cancel">Are you sure you want to cancel receiving products?\nAll changes will be lost!</string>

    <!-- Toast -->
    <string name="t_initconfigerror">Could not load initial configuration!</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="toast_got_receiving_note">Got Receiving Note</string>
    <string name="toast_finished_scanning">Finished scanning</string>
    <string name="toast_starting_update">Starting update</string>
    <string name="t_dbupdated">Database successfully updated.</string>
    <string name="toast_delivery_product_added">Product inserted successfully.</string>
    <string name="toast_delivery_successfully">Delivery successfully added.</string>

</resources>