<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

     <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    
	    <TextView
	        android:id="@+id/tv_settings_title"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true"
	        android:layout_centerHorizontal="true"
	        android:text="@string/tv_settings_title"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	
	    <EditText
	        android:id="@+id/settings_serverIP"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentRight="true"
	        android:layout_below="@+id/tv_settings_serverip"
	        android:ems="10"
	        android:hint="@string/hint_initconf_serverip"
	        android:text="@string/et_initconf_serverip" >
	
	        <requestFocus />
	    </EditText>
	
	    <TextView
	        android:id="@+id/tv_settings_serverip"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/tv_settings_title"
	        android:text="@string/tv_initconf_serverip"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <TextView
	        android:id="@+id/tv_settings_storage"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/settings_serverIP"
	        android:text="@string/tv_initconf_storage"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <CheckBox
	        android:id="@+id/settings_storage"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentRight="true"
	        android:layout_below="@+id/tv_settings_storage"
	        android:text="@string/cb_initconf_storage" />
	
	    <TextView
	        android:id="@+id/tv_settings_localization"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/settings_storage"
	        android:text="@string/tv_settings_localization"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <Spinner
	        android:id="@+id/spinner_settings_localization"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/tv_settings_localization" />
	
	    <Button
	        android:id="@+id/bt_settings_save"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentRight="true"
	        android:layout_below="@+id/spinner_settings_localization"
	        android:onClick="onSaveConfigurationPressed"
	        android:text="@string/bt_initconf_save" />
	
	    <Button
	        android:id="@+id/bt_settings_reset"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentRight="true"
	        android:layout_below="@+id/bt_settings_save"
	        android:onClick="onResetPressed"
	        android:text="@string/bt_settings_reset" />
	   
	   </RelativeLayout>

</ScrollView>