<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_ad_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_product_product"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tv_ad_unit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_product_current_unit"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tv_ad_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_product_amount"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/et_ad_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="3"
        android:inputType="number"
        android:maxLines="1" />

</LinearLayout>